# meraki-engine

./: .env.example  .gitignore  README.md  dom.py  pyproject.toml  pytest.ini  requirements.txt  safe_click.py  setup.py  verify.py
automation/: __init__.py  defillama_airdrop.py  x_session.py
bridge/: __init__.py  operator.py  session_client.py
config/: constants.py  settings.py
core/: profile.py  session.py  settings.py
docs/: roadmap.md
engine/: human.py  retry.py  safe_click.py  verify.py
meraki-engine/config/: constants.py
meraki-engine/core/: __init__.py
meraki-engine/docs/: roadmap.md
meraki-engine/engine/: human.py  retry.py  verify.py
meraki-engine/primitive/: dom.py  vision.py
meraki_engine/: __init__.py
meraki_engine/config/: settings.py
meraki_engine/engine/: human.py  retry.py  safe_click.py  verify.py
meraki_engine/primitive/: dom.py  vision.py
primitive/: dom.py  gesture.py  vision.py
tests/: test_config.py  test_e2e_safe_click.py  test_vision_integration.py
