[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meraki-engine"
version = "0.2.0"
description = "Hybrid browser operator — CDP primitives, vision, and human-like automation engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Meraki"},
]
dependencies = [
    "websockets>=12",
    "Pillow>=10",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["meraki_engine*"]
